# texts-similarities-API-MLService

./: .gitignore  README.md  bento_save_model.py  bentofile.yaml  embed_sent_exporting.ipynb  new_service.py  pyproject.toml  service.py
postprocessing/: sentence_postprocess.py
preprocessing/: sentence_preprocess.py
testing_service/: java-senten-dataset-long-spacy.pkl  test_request.py
tokenizer/multiling-minilm-l12/: tokenizer_config.json
utils/: helpers.py
