[tool.poetry]
name = "sentembed-bentoml-newver"
version = "0.1.0"
description = "Sentence embeddings from CVs with BentoML Service (1.0)"
authors = ["Henry <ascencio.henan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
transformers = "^4.18.0"
spacy = "^3.2.4"
scikit-learn = "^1.0.2"
onnxruntime = "^1.11.0"
onnx = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
